-- MySQL Script generated by MySQL Workbench
-- Thu Dec 10 22:52:23 2020
-- Model: New Model    Version: 1.0
-- MySQL Workbench Forward Engineering

SET @OLD_UNIQUE_CHECKS=@@UNIQUE_CHECKS, UNIQUE_CHECKS=0;
SET @OLD_FOREIGN_KEY_CHECKS=@@FOREIGN_KEY_CHECKS, FOREIGN_KEY_CHECKS=0;
SET @OLD_SQL_MODE=@@SQL_MODE, SQL_MODE='ONLY_FULL_GROUP_BY,STRICT_TRANS_TABLES,NO_ZERO_IN_DATE,NO_ZERO_DATE,ERROR_FOR_DIVISION_BY_ZERO,NO_ENGINE_SUBSTITUTION';

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
DROP SCHEMA IF EXISTS `mydb` ;

-- -----------------------------------------------------
-- Schema mydb
-- -----------------------------------------------------
CREATE SCHEMA IF NOT EXISTS `mydb` DEFAULT CHARACTER SET utf8 ;
USE `mydb` ;

-- -----------------------------------------------------
-- Table `mydb`.`User`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`User` ;

CREATE TABLE IF NOT EXISTS `mydb`.`User` (
  `id` INT NOT NULL,
  `name` VARCHAR(45) NULL,
  `surname` VARCHAR(45) NULL,
  `password` VARCHAR(45) NULL,
  `password` VARCHAR(45) NULL,
  `some column` VARCHAR(200) NULL,
  PRIMARY KEY (`id`))
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`user`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`user` ;

CREATE TABLE IF NOT EXISTS `mydb`.`user` (
  `username` VARCHAR(16) NOT NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(32) NOT NULL,
  `create_time` TIMESTAMP NULL DEFAULT CURRENT_TIMESTAMP);


-- -----------------------------------------------------
-- Table `mydb`.`table1`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`table1` ;

CREATE TABLE IF NOT EXISTS `mydb`.`table1` (
)
ENGINE = InnoDB;


-- -----------------------------------------------------
-- Table `mydb`.`project_user`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`project_user` ;

CREATE TABLE IF NOT EXISTS `mydb`.`project_user` (
  `id` INT NOT NULL,
  `name` VARCHAR(255) NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(255) NULL,
  `role` VARCHAR(255) NULL,
  `users_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_project_user_users1_idx` (`users_id` ASC) VISIBLE,
  CONSTRAINT `fk_project_user_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `mydb`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`user_1`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`user_1` ;

CREATE TABLE IF NOT EXISTS `mydb`.`user_1` (
  `username` VARCHAR(16) NOT NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(32) NOT NULL,
  `role` VARCHAR(20) NULL);


-- -----------------------------------------------------
-- Table `mydb`.`user_2`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`user_2` ;

CREATE TABLE IF NOT EXISTS `mydb`.`user_2` (
  `username` VARCHAR(16) NOT NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(32) NOT NULL,
  `role` VARCHAR(20) NULL);


-- -----------------------------------------------------
-- Table `mydb`.`project_user`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`project_user` ;

CREATE TABLE IF NOT EXISTS `mydb`.`project_user` (
  `id` INT NOT NULL,
  `name` VARCHAR(255) NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(255) NULL,
  `role` VARCHAR(255) NULL,
  `users_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_project_user_users1_idx` (`users_id` ASC) VISIBLE,
  CONSTRAINT `fk_project_user_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `mydb`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`user_3`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`user_3` ;

CREATE TABLE IF NOT EXISTS `mydb`.`user_3` (
  `username` VARCHAR(16) NOT NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(32) NOT NULL,
  `role` VARCHAR(20) NULL);


-- -----------------------------------------------------
-- Table `mydb`.`common_task_1`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`common_task_1` ;

CREATE TABLE IF NOT EXISTS `mydb`.`common_task_1` (
  `id` INT UNIQUE NOT NULL,
  `project_id` INT NULL AUTO_INCREMENT,
  `name` VARCHAR(255) UNIQUE NULL,
  `description` VARCHAR(255) NULL,
  `status` VARCHAR(255) NOT NULL,
  `deadline` DATETIME UNIQUE NULL,
  `created_at` DATETIME NOT NULL,
  `updated_at` DATETIME NULL,
  `Projects_id` INT NOT NULL,
  PRIMARY KEY (`id`, `status`),
  INDEX `fk_common_task_1_Projects1_idx` (`Projects_id` ASC) VISIBLE,
  CONSTRAINT `fk_common_task_1_Projects1`
    FOREIGN KEY (`Projects_id`)
    REFERENCES `mydb`.`Projects` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`user's order with requirements`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`user's order with requirements` ;

CREATE TABLE IF NOT EXISTS `mydb`.`user's order with requirements` (
  `id` INT NOT NULL,
  `order_id` INT NULL,
  `user_id` INT NULL,
  `common_task_1_id` INT UNIQUE NOT NULL,
  `common_task_1_status` VARCHAR(255) NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_user's order with requirements_common_task_11_idx` (`common_task_1_id` ASC, `common_task_1_status` ASC) VISIBLE,
  CONSTRAINT `fk_user's order with requirements_common_task_11`
    FOREIGN KEY (`common_task_1_id` , `common_task_1_status`)
    REFERENCES `mydb`.`common_task_1` (`id` , `status`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`users`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`users` ;

CREATE TABLE IF NOT EXISTS `mydb`.`users` (
  `id` INT NOT NULL,
  `name` VARCHAR(255) NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(255) NULL,
  `role` VARCHAR(255) NULL,
  `avatar` VARCHAR(255) NULL,
  `nickname` VARCHAR(255) NULL,
  `created_at` DATETIME NULL,
  `user's order with requirements_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_users_user's order with requirements1_idx` (`user's order with requirements_id` ASC) VISIBLE,
  CONSTRAINT `fk_users_user's order with requirements1`
    FOREIGN KEY (`user's order with requirements_id`)
    REFERENCES `mydb`.`user's order with requirements` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`project_user`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`project_user` ;

CREATE TABLE IF NOT EXISTS `mydb`.`project_user` (
  `id` INT NOT NULL,
  `name` VARCHAR(255) NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(255) NULL,
  `role` VARCHAR(255) NULL,
  `users_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_project_user_users1_idx` (`users_id` ASC) VISIBLE,
  CONSTRAINT `fk_project_user_users1`
    FOREIGN KEY (`users_id`)
    REFERENCES `mydb`.`users` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`Projects`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`Projects` ;

CREATE TABLE IF NOT EXISTS `mydb`.`Projects` (
  `id` INT NOT NULL,
  `name` VARCHAR(255) NOT NULL,
  `description` VARCHAR(255) UNIQUE NULL,
  `created_at` DATETIME NOT NULL,
  `updated_at` DATETIME NOT NULL,
  `project_user_id` INT NOT NULL,
  PRIMARY KEY (`id`),
  INDEX `fk_Projects_project_user1_idx` (`project_user_id` ASC) VISIBLE,
  CONSTRAINT `fk_Projects_project_user1`
    FOREIGN KEY (`project_user_id`)
    REFERENCES `mydb`.`project_user` (`id`)
    ON DELETE NO ACTION
    ON UPDATE NO ACTION);


-- -----------------------------------------------------
-- Table `mydb`.`project_user_1`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`project_user_1` ;

CREATE TABLE IF NOT EXISTS `mydb`.`project_user_1` (
  `id` INT NOT NULL,
  `email` VARCHAR(255) NULL,
  `password` VARCHAR(32) NOT NULL,
  `role` VARCHAR(20) NULL,
  `name` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`id`, `name`));


-- -----------------------------------------------------
-- Table `mydb`.`common_task`
-- -----------------------------------------------------
DROP TABLE IF EXISTS `mydb`.`common_task` ;

CREATE TABLE IF NOT EXISTS `mydb`.`common_task` (
  `id`  NULL);


SET SQL_MODE=@OLD_SQL_MODE;
SET FOREIGN_KEY_CHECKS=@OLD_FOREIGN_KEY_CHECKS;
SET UNIQUE_CHECKS=@OLD_UNIQUE_CHECKS;
